rbk: Почему мы? Наше производство Цифры

--- a/rbk/index.html
+++ b/rbk/index.html
@@ -70,7 +70,7 @@
           <div class="row">
             <div class="col-xs-6">
               <div class="rbk-main-slider__item-pic">
-                <img src="http://placehold.it/572x400/adc7c1/333" alt="">
+                <img width="572" height="400" src="assets/img/slider/pic1.png" alt="">
               </div>
             </div>
             <div class="col-xs-6">
@@ -102,6 +102,231 @@
       </div>
     </div>
   </section>
+  <section class="rbk-benefits">
+    <div class="container-fluid">
+      <h3 class="rbk-title puzzle_ta_center">
+        Почему мы?
+      </h3>
+      <div class="rbk-benefits-list">
+        <div class="row">
+          <div class="col-xs-4">
+            <div class="rbk-benefits-item is-blue">
+              <div class="rbk-benefits-item-icon">
+                <i class="puzzle-icon" style="width: 60px; height: 60px;">
+                  <svg width="62" height="62" viewBox="0 0 62 62" xmlns="http://www.w3.org/2000/svg">
+                    <g transform="translate(1 1)" fill="none" fill-rule="evenodd">
+                      <circle stroke="#2386DB" stroke-width="2" fill="#2386DB" cx="30" cy="30" r="30"/>
+                      <path d="M34.063 44.946l.752-3.147a12.457 12.457 0 0 0 2.193-.98l2.617 1.535c.317.193.706.297 1.11.297a2.32 2.32 0 0 0 1.633-.663l.977-.988c.707-.707.851-1.894.332-2.757l-1.573-2.623c.376-.707.683-1.445.915-2.21l2.646-.729c.6-.148 1.349-.64 1.335-2.087l-.002-.093v-1.375l.002-.092c.015-1.447-.736-1.938-1.368-2.096l-2.778-.727a12.098 12.098 0 0 0-.836-2.184l1.61-2.627c.53-.879.394-2.064-.31-2.766l-.956-.967a2.282 2.282 0 0 0-1.611-.655c-.411 0-.807.108-1.146.313l-2.617 1.571a12.327 12.327 0 0 0-2.206-.913l-.727-2.645C33.96 14.958 33.564 14 32.09 14h-1.684L30.285 14c-1.474 0-1.872.956-1.975 1.368l-.727 2.777c-.814.23-1.529.505-2.183.836l-2.627-1.61a2.295 2.295 0 0 0-1.183-.324c-.603 0-1.179.23-1.583.635l-.966.956c-.717.715-.861 1.897-.343 2.756l1.572 2.618a12.264 12.264 0 0 0-.902 2.167l-3.288.752c-.82.205-2.08.972-2.08 2.195V30.5c0 1.222 1.26 1.99 2.054 2.189l3.147.752c.234.71.559 1.437.98 2.191l-1.535 2.618c-.505.839-.352 2.024.366 2.742l.99.979c.408.408.995.643 1.607.643.414 0 .811-.107 1.15-.31l2.623-1.573c.695.37 1.42.67 2.17.902l.754 3.287c.202.82.972 2.079 2.195 2.079h1.375c1.22 0 1.988-1.26 2.187-2.054zm-4.372-1.09l-.89-3.873a10.364 10.364 0 0 1-3.159-1.31l-3.14 1.881a.802.802 0 0 1-.417.108.867.867 0 0 1-.606-.233l-.93-.92c-.253-.252-.33-.711-.145-1.017l1.841-3.138c-.6-.96-1.13-2.023-1.39-3.16l-3.711-.887c-.346-.084-.957-.449-.957-.806V29.2c0-.357.61-.722.957-.808l3.872-.886a10.378 10.378 0 0 1 1.311-3.158l-1.881-3.136a.868.868 0 0 1 .125-1.012l.92-.91a.82.82 0 0 1 .577-.22c.155 0 .311.038.44.117l3.138 1.923c.96-.6 2.023-.967 3.16-1.229l.887-3.385c.07-.281.322-.307.605-.307l.203.001h1.3l.204-.001c.282 0 .534.027.605.307l.886 3.223c1.137.261 2.197.71 3.157 1.311l3.136-1.883a.795.795 0 0 1 .412-.108c.223 0 .448.081.6.233l.91.92c.252.253.288.712.104 1.018l-1.925 3.138c.601.96.968 2.023 1.231 3.159l3.384.887c.348.086.306.452.306.808v1.301c0 .357.04.722-.306.808l-3.221.889a10.363 10.363 0 0 1-1.313 3.16l1.883 3.141a.884.884 0 0 1-.125 1.023l-.92.93a.903.903 0 0 1-.626.246.752.752 0 0 1-.392-.102l-3.138-1.842c-.959.601-2.022 1.13-3.159 1.392l-.887 3.71c-.085.344-.449.955-.807.955h-1.3c-.359 0-.723-.61-.809-.957z" fill-rule="nonzero" fill="#FFF"/>
+                      <circle stroke="#FFF" stroke-width="2" cx="31" cy="30" r="4"/>
+                    </g>
+                  </svg>
+                </i>
+              </div>
+              <div class="rbk-benefits-item-title">
+                Оптимизация
+                стоимости
+              </div>
+              <div class="rbk-benefits-item-text">
+                <div class="rbk-benefits-item-text-one">
+                  Выполнение СРМ своими руками
+                </div>
+                <div class="rbk-benefits-item-text-one">
+                  Формирование бюджета и оптимальных проектных решений на этапе разработки
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-4">
+            <div class="rbk-benefits-item is-green">
+              <div class="rbk-benefits-item-icon">
+                <i class="puzzle-icon" style="width: 60px; height: 60px;">
+                  <svg width="57" height="57" viewBox="0 0 57 57" xmlns="http://www.w3.org/2000/svg">
+                    <g fill="none" fill-rule="evenodd">
+                      <circle fill="#00A9A8" cx="28.5" cy="28.5" r="28.5"/>
+                      <path d="M37.167 18.063h-2.98v-1.375a.687.687 0 1 0-1.374 0v1.375h-4.126v-1.375a.687.687 0 1 0-1.375 0v1.375h-4.125v-1.375a.687.687 0 1 0-1.375 0v1.375h-2.978c-1.013 0-1.834.82-1.834 1.832v16.271C17 37.18 17.82 38 18.834 38h18.333C38.18 38 39 37.18 39 36.166v-16.27c0-1.013-.82-1.834-1.833-1.834zm0 17.103c0 .71.057.868-.195.868h-17.62c-.254 0-.319-.478-.319-.731V20.609c0-.253.065-.6.318-.6h2.462v.804a.687.687 0 1 0 1.375 0v-.803h4.125v.803a.687.687 0 1 0 1.375 0v-.803h4.125v.803a.687.687 0 1 0 1.374 0v-.803h2.488c.252 0 .458.205.458.457l.034 14.7z" fill-rule="nonzero" fill="#FFF"/>
+                      <path fill="#FFF" d="M21 23h2v2h-2zM21 27h2v2h-2zM21 31h2v2h-2zM25 23h2v2h-2zM25 27h2v2h-2zM25 31h2v2h-2zM29 23h2v2h-2zM29 27h2v2h-2zM29 31h2v2h-2zM33 23h2v2h-2zM33 27h2v2h-2zM33 31h2v2h-2z"/>
+                    </g>
+                  </svg>
+                </i>
+              </div>
+              <div class="rbk-benefits-item-title">
+                Оптимизация
+                сроков
+              </div>
+              <div class="rbk-benefits-item-text">
+                <div class="rbk-benefits-item-text-one">
+                  Эффективный тайм-менеджмент;
+                </div>
+                <div class="rbk-benefits-item-text-one">
+                  Возможность начала работы
+                  без аванса;
+                </div>
+                <div class="rbk-benefits-item-text-one">
+                  Современные программные приложения
+                  (CRM, FILEMAKER, MS PROJECT, SCADA, REVIT).
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-4">
+            <div class="rbk-benefits-item is-yellow">
+              <div class="rbk-benefits-item-icon">
+                <i class="puzzle-icon" style="width: 60px; height: 60px;">
+                  <svg width="57" height="57" viewBox="0 0 57 57" xmlns="http://www.w3.org/2000/svg">
+                    <g fill="none" fill-rule="evenodd">
+                      <circle fill="#F9B001" cx="28.5" cy="28.5" r="28.5"/>
+                      <path d="M30.188 12.86v.014c.174.239.186.497-.012.755l.012-.77zm-.007.014l3.429 10.793 11.162-.02c.678 0 1.228.56 1.228 1.25 0 .416-.198.784-.508 1.009v.005l-9.046 6.654 3.467 10.794a1.258 1.258 0 0 1-.79 1.578c-.423.14-.87.034-1.186-.239L29 38.068l-9.017 6.692a1.218 1.218 0 0 1-1.717-.272 1.26 1.26 0 0 1-.174-1.12h-.005l3.467-10.793-9.046-6.655a1.268 1.268 0 0 1-.273-1.75 1.24 1.24 0 0 1 1.073-.518l11.092.02 3.429-10.803a1.224 1.224 0 0 1 1.547-.809c.39.13.678.44.795.809l.01.005zm1.572 12.1L28.997 16l-2.756 8.973c-.173.565-.68.973-1.273.973L16 25.93l7.235 5.505c.48.345.706.99.522 1.597L20.97 42l7.204-5.527.041-.032.005-.006a1.283 1.283 0 0 1 1.57 0l7.245 5.56-2.786-8.968c-.174-.565.01-1.21.485-1.575L42 25.919l-8.892.016c-.593.038-1.165-.349-1.355-.973v.011z" fill="#FFF" fill-rule="nonzero"/>
+                    </g>
+                  </svg>
+                </i>
+              </div>
+              <div class="rbk-benefits-item-title">
+                Менеджмент
+                качества
+              </div>
+              <div class="rbk-benefits-item-text">
+                <div class="rbk-benefits-item-text-one">
+                  Внутренний технадзор компании;
+                </div>
+                <div class="rbk-benefits-item-text-one">
+                  европейская система менеджмента качества на всех этапах строительства;
+                </div>
+                <div class="rbk-benefits-item-text-one">
+                  видеонаблюдение 24 часа в сутки на всех строительных объектах.
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="rbk-benefits__footer">
+        <div class="rbk-benefits__footer-text">
+          После слияния компаний в 2011 году DERUS-ALLIANZ получила не только высококачественное оборудование и персонал с опытом работы на объектах различной сложности , но и европейский подход к процессу управления проектами.
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="rbk-examples">
+    <div class="container-fluid">
+      <h3 class="rbk-title puzzle_ta_center">
+        Наше производство
+      </h3>
+      <div class="row">
+        <div class="col-xs-4">
+          <div class="rbk-examples__item">
+            <div class="rbk-examples__item-pic">
+              <img src="assets/img/temp/2.png" alt="">
+            </div>
+            <div class="rbk-examples__item-title">
+              Сендвич-панели
+            </div>
+            <div class="rbk-examples__item-text">
+              Металлические с наполнителем из минеральной ваты или пенополистирола
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-4">
+          <div class="rbk-examples__item">
+            <div class="rbk-examples__item-pic">
+              <img src="assets/img/temp/1.png" alt="">
+            </div>
+            <div class="rbk-examples__item-title">
+              Металлоконструкции
+            </div>
+            <div class="rbk-examples__item-text">
+              Проектирование, изготовление, монтаж, генподряд
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-4">
+          <div class="rbk-examples__item">
+            <div class="rbk-examples__item-pic">
+              <img src="assets/img/temp/3.png" alt="">
+            </div>
+            <div class="rbk-examples__item-title">
+              Зенитные фонари и люки дымоудаления
+            </div>
+            <div class="rbk-examples__item-text">
+              Проектирование, изготовление, монтаж, генподряд
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row center-xs">
+        <div class="col-xs-12">
+          <a href="javascript:void(0)" class="rbk-examples__download">
+            <i class="rbk-examples__download-icon puzzle-icon puzzle_va_middle" style="width: 25px; height: 25px;">
+              <svg height="141.732" viewBox="0 0 141.732 141.732" width="141.732" xmlns="http://www.w3.org/2000/svg">
+                <path fill="#d3d9dc" d="M120.674 125.138H20.793v16.594h99.881v-16.594zm-1.655-66.362a6.557 6.557 0 0 0-9.275 0L77.21 91.312V6.562A6.563 6.563 0 0 0 70.648 0a6.56 6.56 0 0 0-6.56 6.563v84.75L31.992 59.218a6.556 6.556 0 0 0-9.277 0 6.556 6.556 0 0 0 0 9.279l43.294 43.293c.15.154.314.299.481.438.076.062.155.113.234.176.094.065.186.142.279.206.097.063.192.114.286.174.088.054.174.105.265.153.1.056.199.1.298.147.097.045.19.091.283.132.098.04.196.072.295.105.104.038.207.078.312.109.101.03.197.052.297.077.108.023.214.058.324.078.115.021.231.033.346.054.097.015.192.032.289.042.43.042.865.042 1.295 0 .1-.01.191-.027.289-.042.114-.021.233-.029.344-.054.109-.021.217-.055.324-.078.102-.025.199-.047.299-.077.105-.031.207-.071.312-.109.102-.03.195-.062.295-.105.096-.041.191-.087.283-.132.1-.048.199-.092.297-.147.091-.048.177-.104.264-.153.098-.06.193-.11.287-.174.096-.064.189-.141.281-.206.076-.062.156-.113.233-.176.249-.204.479-.437.694-.67.076-.067.154-.131.229-.203l43.294-43.296a6.566 6.566 0 0 0 .001-9.283"/>
+              </svg>
+            </i>
+            <div class="rbk-examples__download-link puzzle_va_middle">
+              Скачать каталог
+            </div>
+            <div class="rbk-examples__download-text puzzle_va_middle">
+              PDF
+            </div>
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="rbk-numbers">
+    <div class="container-fluid puzzle_ta_center">
+      <div class="rbk-numbers__item is-blue">
+        <div class="rbk-numbers__title">
+          53
+        </div>
+        <div class="rbk-numbers__info">
+          реализованных проекта
+        </div>
+      </div>
+      <div class="rbk-numbers__item is-green">
+        <div class="rbk-numbers__title">
+          11
+        </div>
+        <div class="rbk-numbers__info">
+          строительных машин и механизмов
+        </div>
+      </div>
+      <div class="rbk-numbers__item is-blue is-center">
+        <div class="rbk-numbers__title">
+          12
+        </div>
+        <div class="rbk-numbers__info">
+          городов
+        </div>
+      </div>
+      <div class="rbk-numbers__item is-green">
+        <div class="rbk-numbers__title">
+          98
+        </div>
+        <div class="rbk-numbers__info">
+          сотрудников постоянного штата
+        </div>
+      </div>
+      <div class="rbk-numbers__item is-blue">
+        <div class="rbk-numbers__title">
+          5
+        </div>
+        <div class="rbk-numbers__info">
+          проектов в работе
+          единовременно
+        </div>
+      </div>
+    </div>
+  </section>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
 </div>
 </body>
 </html>
