--- a/rbk/index.html
+++ b/rbk/index.html
@@ -450,44 +450,44 @@
       Клиенты
     </div>
     <div class="rbk-customers__list">
-      <div class="rbk-customers__item">
+      <a href="javascript:void(0)" class="rbk-customers__item">
         <img width="147" height="50" src="assets/img/temp/ikea_logo.png" alt="">
-      </div>
-      <div class="rbk-customers__item">
+      </a>
+      <a href="javascript:void(0)" class="rbk-customers__item">
         <img width="147" height="45" src="assets/img/temp/Auchan-logo.png" alt="">
-      </div>
-      <div class="rbk-customers__item">
+      </a>
+      <a href="javascript:void(0)" class="rbk-customers__item">
         <img width="147" height="50" src="assets/img/temp/ikea_logo.png" alt="">
-      </div>
-      <div class="rbk-customers__item">
+      </a>
+      <a href="javascript:void(0)" class="rbk-customers__item">
         <img width="147" height="45" src="assets/img/temp/Auchan-logo.png" alt="">
-      </div>
-      <div class="rbk-customers__item">
+      </a>
+      <a href="javascript:void(0)" class="rbk-customers__item">
         <img width="147" height="50" src="assets/img/temp/ikea_logo.png" alt="">
-      </div>
-      <div class="rbk-customers__item">
+      </a>
+      <a href="javascript:void(0)" class="rbk-customers__item">
         <img width="147" height="45" src="assets/img/temp/Auchan-logo.png" alt="">
-      </div>
+      </a>
     </div>
     <div class="rbk-customers__list">
-      <div class="rbk-customers__item">
+      <a href="javascript:void(0)" class="rbk-customers__item">
         <img width="147" height="45" src="assets/img/temp/Auchan-logo.png" alt="">
-      </div>
-      <div class="rbk-customers__item">
+      </a>
+      <a href="javascript:void(0)" class="rbk-customers__item">
         <img width="147" height="50" src="assets/img/temp/ikea_logo.png" alt="">
-      </div>
-      <div class="rbk-customers__item">
+      </a>
+      <a href="javascript:void(0)" class="rbk-customers__item">
         <img width="147" height="45" src="assets/img/temp/Auchan-logo.png" alt="">
-      </div>
-      <div class="rbk-customers__item">
+      </a>
+      <a href="javascript:void(0)" class="rbk-customers__item">
         <img width="147" height="50" src="assets/img/temp/ikea_logo.png" alt="">
-      </div>
-      <div class="rbk-customers__item">
+      </a>
+      <a href="javascript:void(0)" class="rbk-customers__item">
         <img width="147" height="45" src="assets/img/temp/Auchan-logo.png" alt="">
-      </div>
-      <div class="rbk-customers__item">
+      </a>
+      <a href="javascript:void(0)" class="rbk-customers__item">
         <img width="147" height="50" src="assets/img/temp/ikea_logo.png" alt="">
-      </div>
+      </a>
     </div>
   </div>
 </div>
