rbk: added sliders

--- a/rbk/index.html
+++ b/rbk/index.html
@@ -66,39 +66,109 @@
   <section class="rbk-main-slider">
     <div class="rbk-main-slider-content">
       <div class="container-fluid">
-        <div class="rbk-main-slider__item">
-          <div class="row">
-            <div class="col-xs-6">
-              <div class="rbk-main-slider__item-pic">
-                <img width="572" height="400" src="assets/img/slider/pic1.png" alt="">
+        <div class="rbk-main-slider__frame" id="mainSliderFrame">
+          <div class="rbk-main-slider__slidee">
+            <div class="rbk-main-slider__item">
+              <div class="row">
+                <div class="col-xs-6">
+                  <div class="rbk-main-slider__item-pic">
+                    <img width="572" height="400" src="assets/img/slider/pic1.png" alt="">
+                  </div>
+                </div>
+                <div class="col-xs-6">
+                  <div class="rbk-main-slider__item-text">
+                    <h1 class="rbk-main-slider__item-text-title">
+                      Жилой комплекс
+                      <br>
+                      «Столичный»
+                    </h1>
+                    <div class="rbk-main-slider__item-text-subtitle">
+                      Российская компания с европейским подходом к строительству. Является правопреемником швейцарской строительной компании FLOORTECH INTERNATIONAL GMBH.
+                    </div>
+                    <a href="javascript:void(0)" class="more-button more-button_size_m more-button_style_white">
+                      Подробнее
+                    </a>
+                  </div>
+                </div>
               </div>
             </div>
-            <div class="col-xs-6">
-              <div class="rbk-main-slider__item-text">
-                <h1 class="rbk-main-slider__item-text-title">
-                  Жилой комплекс
-                  <br>
-                  «Столичный»
-                </h1>
-                <div class="rbk-main-slider__item-text-subtitle">
-                  Российская компания с европейским подходом к строительству. Является правопреемником швейцарской строительной компании FLOORTECH INTERNATIONAL GMBH.
+            <div class="rbk-main-slider__item">
+              <div class="row">
+                <div class="col-xs-6">
+                  <div class="rbk-main-slider__item-pic">
+                    <img width="572" height="400" src="assets/img/slider/pic1.png" alt="">
+                  </div>
                 </div>
-                <a href="javascript:void(0)" class="more-button more-button_size_m more-button_style_white">
-                  Подробнее
-                </a>
+                <div class="col-xs-6">
+                  <div class="rbk-main-slider__item-text">
+                    <h1 class="rbk-main-slider__item-text-title">
+                      2 Жилой комплекс
+                      <br>
+                      «Столичный»
+                    </h1>
+                    <div class="rbk-main-slider__item-text-subtitle">
+                      Российская компания с европейским подходом к строительству. Является правопреемником швейцарской строительной компании FLOORTECH INTERNATIONAL GMBH.
+                    </div>
+                    <a href="javascript:void(0)" class="more-button more-button_size_m more-button_style_white">
+                      Подробнее
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="rbk-main-slider__item">
+              <div class="row">
+                <div class="col-xs-6">
+                  <div class="rbk-main-slider__item-pic">
+                    <img width="572" height="400" src="assets/img/slider/pic1.png" alt="">
+                  </div>
+                </div>
+                <div class="col-xs-6">
+                  <div class="rbk-main-slider__item-text">
+                    <h1 class="rbk-main-slider__item-text-title">
+                      3 Жилой комплекс
+                      <br>
+                      «Столичный»
+                    </h1>
+                    <div class="rbk-main-slider__item-text-subtitle">
+                      Российская компания с европейским подходом к строительству. Является правопреемником швейцарской строительной компании FLOORTECH INTERNATIONAL GMBH.
+                    </div>
+                    <a href="javascript:void(0)" class="more-button more-button_size_m more-button_style_white">
+                      Подробнее
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="rbk-main-slider__item">
+              <div class="row">
+                <div class="col-xs-6">
+                  <div class="rbk-main-slider__item-pic">
+                    <img width="572" height="400" src="assets/img/slider/pic1.png" alt="">
+                  </div>
+                </div>
+                <div class="col-xs-6">
+                  <div class="rbk-main-slider__item-text">
+                    <h1 class="rbk-main-slider__item-text-title">
+                      4 Жилой комплекс
+                      <br>
+                      «Столичный»
+                    </h1>
+                    <div class="rbk-main-slider__item-text-subtitle">
+                      Российская компания с европейским подходом к строительству. Является правопреемником швейцарской строительной компании FLOORTECH INTERNATIONAL GMBH.
+                    </div>
+                    <a href="javascript:void(0)" class="more-button more-button_size_m more-button_style_white">
+                      Подробнее
+                    </a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
-        <div class="row">
+        <div class="row" style="z-index: 100; position: relative;">
           <div class="col-xs-6 col-xs-offset-6">
-            <div class="rbk-main-slider__paginator">
-              <div class="rbk-main-slider__paginator-item active"></div>
-              <div class="rbk-main-slider__paginator-item"></div>
-              <div class="rbk-main-slider__paginator-item"></div>
-              <div class="rbk-main-slider__paginator-item"></div>
-              <div class="rbk-main-slider__paginator-item"></div>
-            </div>
+            <div class="rbk-main-slider__paginator"></div>
           </div>
         </div>
       </div>
@@ -214,43 +284,43 @@
       <h3 class="rbk-title puzzle_ta_center">
         Наше производство
       </h3>
-      <div class="row">
-        <div class="col-xs-4">
-          <div class="rbk-examples__item">
-            <div class="rbk-examples__item-pic">
-              <img src="assets/img/temp/2.png" alt="">
-            </div>
-            <div class="rbk-examples__item-title">
-              Сендвич-панели
-            </div>
-            <div class="rbk-examples__item-text">
-              Металлические с наполнителем из минеральной ваты или пенополистирола
-            </div>
-          </div>
-        </div>
-        <div class="col-xs-4">
-          <div class="rbk-examples__item">
-            <div class="rbk-examples__item-pic">
-              <img src="assets/img/temp/1.png" alt="">
-            </div>
-            <div class="rbk-examples__item-title">
-              Металлоконструкции
-            </div>
-            <div class="rbk-examples__item-text">
-              Проектирование, изготовление, монтаж, генподряд
-            </div>
-          </div>
-        </div>
-        <div class="col-xs-4">
-          <div class="rbk-examples__item">
-            <div class="rbk-examples__item-pic">
-              <img src="assets/img/temp/3.png" alt="">
-            </div>
-            <div class="rbk-examples__item-title">
-              Зенитные фонари и люки дымоудаления
-            </div>
-            <div class="rbk-examples__item-text">
-              Проектирование, изготовление, монтаж, генподряд
+      <div class="rbk-examples__slider rbk-news__slider">
+        <div class="rbk-examples__slider-content rbk-projects__slider-content">
+          <div class="rbk-projects__slider-frame" id="examplesSlider">
+            <div class="rbk-projects__slider-list rbk-projects__slider-slidee">
+              <div class="rbk-projects__slider-item">
+                <div class="rbk-projects__slider-item-pic">
+                  <img src="assets/img/temp/2.jpg" alt="">
+                </div>
+                <div class="rbk-projects__slider-item-title">
+                  <a href="javascript:void(0)">Сендвич-панели</a>
+                </div>
+                <div class="rbk-projects__slider-item-city">
+                  Металлические с наполнителем из минеральной ваты или пенополистирола
+                </div>
+              </div>
+              <div class="rbk-projects__slider-item">
+                <div class="rbk-projects__slider-item-pic">
+                  <img src="assets/img/temp/1.jpg" alt="">
+                </div>
+                <div class="rbk-projects__slider-item-title">
+                  <a href="javascript:void(0)">Металлоконструкции</a>
+                </div>
+                <div class="rbk-projects__slider-item-city">
+                  Проектирование, изготовление, монтаж, генподряд
+                </div>
+              </div>
+              <div class="rbk-projects__slider-item">
+                <div class="rbk-projects__slider-item-pic">
+                  <img src="assets/img/temp/3.jpg" alt="">
+                </div>
+                <div class="rbk-projects__slider-item-title">
+                  <a href="javascript:void(0)">Зенитные фонари и люки дымоудаления</a>
+                </div>
+                <div class="rbk-projects__slider-item-city">
+                  Проектирование, изготовление, монтаж, генподряд
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -326,7 +396,41 @@
       </h3>
       <div class="rbk-projects__slider">
         <div class="rbk-projects__slider-content">
-          <div class="rbk-projects__slider-list">
+          <div class="rbk-projects__slider-frame" id="projectSlider">
+            <div class="rbk-projects__slider-list rbk-projects__slider-slidee">
+              <div class="rbk-projects__slider-item">
+                <div class="rbk-projects__slider-item-pic">
+                  <img src="assets/img/temp/4.png" alt="">
+                </div>
+                <div class="rbk-projects__slider-item-title">
+                  Жилой комплекс «Столичный»
+                </div>
+                <div class="rbk-projects__slider-item-city">
+                  г. Сочи
+                </div>
+              </div>
+              <div class="rbk-projects__slider-item">
+                <div class="rbk-projects__slider-item-pic">
+                  <img src="assets/img/temp/5.png" alt="">
+                </div>
+                <div class="rbk-projects__slider-item-title">
+                  Автосалон Ягуар
+                </div>
+                <div class="rbk-projects__slider-item-city">
+                 г. Москва
+               </div>
+             </div>
+             <div class="rbk-projects__slider-item">
+              <div class="rbk-projects__slider-item-pic">
+                <img src="assets/img/temp/krono2.jpg" alt="">
+              </div>
+              <div class="rbk-projects__slider-item-title">
+                Завод Кроношпан
+              </div>
+              <div class="rbk-projects__slider-item-city">
+                г. Егорьевск, Московская область
+              </div>
+            </div>
             <div class="rbk-projects__slider-item">
               <div class="rbk-projects__slider-item-pic">
                 <img src="assets/img/temp/4.png" alt="">
@@ -351,7 +455,7 @@
            </div>
            <div class="rbk-projects__slider-item">
             <div class="rbk-projects__slider-item-pic">
-              <img src="assets/img/temp/1.png" alt="">
+              <img src="assets/img/temp/krono2.jpg" alt="">
             </div>
             <div class="rbk-projects__slider-item-title">
               Завод Кроношпан
@@ -361,12 +465,8 @@
             </div>
           </div>
         </div>
+          </div>
         <div class="rbk-projects__slider-paginator">
-          <div class="rbk-main-slider__paginator-item active"></div>
-          <div class="rbk-main-slider__paginator-item"></div>
-          <div class="rbk-main-slider__paginator-item"></div>
-          <div class="rbk-main-slider__paginator-item"></div>
-          <div class="rbk-main-slider__paginator-item"></div>
         </div>
       </div>
     </div>
@@ -391,47 +491,49 @@
     </h3>
     <div class="rbk-news__slider">
       <div class="rbk-news__slider-content rbk-projects__slider-content">
-        <div class="rbk-projects__slider-list">
-          <div class="rbk-projects__slider-item">
-            <div class="rbk-projects__slider-item-date">
-              23 октября 2017
+        <div class="rbk-projects__slider-frame" id="newsSlider">
+          <div class="rbk-projects__slider-list rbk-projects__slider-slidee">
+            <div class="rbk-projects__slider-item">
+              <div class="rbk-projects__slider-item-date">
+                23 октября 2017
+              </div>
+              <div class="rbk-projects__slider-item-pic">
+                <img src="assets/img/temp/6.jpg" alt="">
+              </div>
+              <div class="rbk-projects__slider-item-title">
+                <a href="javascript:void(0)">Завершен проект строительства завода</a>
+              </div>
+              <div class="rbk-projects__slider-item-city">
+                Новое химическое производство в Ленинградской обл.
+              </div>
             </div>
-            <div class="rbk-projects__slider-item-pic">
-              <img src="assets/img/temp/6.jpg" alt="">
+            <div class="rbk-projects__slider-item">
+              <div class="rbk-projects__slider-item-date">
+                23 октября 2017
+              </div>
+              <div class="rbk-projects__slider-item-pic">
+                <img src="assets/img/temp/6.jpg" alt="">
+              </div>
+              <div class="rbk-projects__slider-item-title">
+                <a href="javascript:void(0)">Завершен проект строительства завода</a>
+              </div>
+              <div class="rbk-projects__slider-item-city">
+                Новое химическое производство в Ленинградской обл.
+              </div>
             </div>
-            <div class="rbk-projects__slider-item-title">
-              <a href="javascript:void(0)">Завершен проект строительства завода</a>
-            </div>
-            <div class="rbk-projects__slider-item-city">
-              Новое химическое производство в Ленинградской обл.
-            </div>
-          </div>
-          <div class="rbk-projects__slider-item">
-            <div class="rbk-projects__slider-item-date">
-              23 октября 2017
-            </div>
-            <div class="rbk-projects__slider-item-pic">
-              <img src="assets/img/temp/6.jpg" alt="">
-            </div>
-            <div class="rbk-projects__slider-item-title">
-              <a href="javascript:void(0)">Завершен проект строительства завода</a>
-            </div>
-            <div class="rbk-projects__slider-item-city">
-              Новое химическое производство в Ленинградской обл.
-            </div>
-          </div>
-          <div class="rbk-projects__slider-item">
-            <div class="rbk-projects__slider-item-date">
-              23 октября 2017
-            </div>
-            <div class="rbk-projects__slider-item-pic">
-              <img src="assets/img/temp/6.jpg" alt="">
-            </div>
-            <div class="rbk-projects__slider-item-title">
-              <a href="javascript:void(0)">Завершен проект строительства завода</a>
-            </div>
-            <div class="rbk-projects__slider-item-city">
-              Новое химическое производство в Ленинградской обл.
+            <div class="rbk-projects__slider-item">
+              <div class="rbk-projects__slider-item-date">
+                23 октября 2017
+              </div>
+              <div class="rbk-projects__slider-item-pic">
+                <img src="assets/img/temp/6.jpg" alt="">
+              </div>
+              <div class="rbk-projects__slider-item-title">
+                <a href="javascript:void(0)">Завершен проект строительства завода</a>
+              </div>
+              <div class="rbk-projects__slider-item-city">
+                Новое химическое производство в Ленинградской обл.
+              </div>
             </div>
           </div>
         </div>
@@ -494,7 +596,6 @@
 </div>
 <footer class="rbk-footer">
   <div class="container-fluid">
-
     <div class="row">
       <div class="col-xs-4">
         <div class="rbk-footer__logo">
@@ -588,9 +689,14 @@
         </div>
       </div>
     </div>
-
   </div>
 </footer>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+<script src="assets/js/plugins.js"></script>
+<script src="assets/js/sly.min.js"></script>
+
+<!-- custom -->
+<script src="assets/js/script.js"></script>
 </body>
 </html>
 
