rbk: top search toggle

--- a/rbk/index.html
+++ b/rbk/index.html
@@ -10,6 +10,29 @@
 </head>
 <body>
   <header class="rbk-header">
+    <div class="rbk-header__search-form" style="display: none;">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-xs-9">
+            <input type="text" placeholder="Введите запрос" class="rbk-header__search-form-input">
+          </div>
+          <div class="col-xs-3 puzzle_ta_right">
+            <div class="rbk-header__search-form-btn puzzle_va_middle">
+              <a href="javascript:void(0)" class="more-button more-button_size_m more-button_style_gray">
+                Найти
+              </a>
+            </div>
+            <div class="rbk-header__search-form-close rbk-header__search-form-close_js_click puzzle-icon__wrapper puzzle_va_middle" style="width: 22px; height: 22px;">
+              <i class="puzzle-icon" style="width: 17px; height: 17px;">
+                <svg width="17" height="17" viewBox="0 0 17 17" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M6.987 8.45L.293 15.146a1 1 0 0 0 1.414 1.414l6.694-6.694 6.695 6.694a1 1 0 0 0 1.414-1.414L9.816 8.451l6.694-6.695A1 1 0 1 0 15.096.342L8.4 7.037 1.707.342A1 1 0 1 0 .293 1.756l6.694 6.695z" fill-rule="nonzero" fill="#252B33"/>
+                </svg>
+              </i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="container-fluid">
       <div class="row middle-xs">
         <div class="col-xs-3">
@@ -53,7 +76,7 @@
              Контакты 
            </a>
          </div>
-         <i class="rbk-header__search puzzle-icon puzzle_va_middle" style="width: 22px; height: 22px;">
+         <i class="rbk-header__search rbk-header__search_js_click puzzle-icon puzzle_va_middle" style="width: 22px; height: 22px;">
           <svg width="22" height="22" viewBox="0 0 22 22" xmlns="http://www.w3.org/2000/svg">
             <path d="M13.427 15.427a8.5 8.5 0 1 1 2-2l5.585 5.585c.55.55.546 1.43 0 1.976l-.024.024a1.399 1.399 0 0 1-1.976 0l-5.585-5.585zM8.5 15a6.5 6.5 0 1 0 0-13 6.5 6.5 0 0 0 0 13z" fill-rule="nonzero" fill="#000"/>
           </svg>
