--- a/rbk/index.html
+++ b/rbk/index.html
@@ -13,10 +13,10 @@
     <div class="rbk-header__search-form" style="display: none;">
       <div class="container-fluid">
         <div class="row">
-          <div class="col-xs-9">
+          <div class="col-xs-9 col-sm-8 col-md-9">
             <input type="text" placeholder="Введите запрос" class="rbk-header__search-form-input">
           </div>
-          <div class="col-xs-3 puzzle_ta_right">
+          <div class="col-xs-3 col-sm-4 col-md-3 puzzle_ta_right">
             <div class="rbk-header__search-form-btn puzzle_va_middle">
               <a href="javascript:void(0)" class="more-button more-button_size_m more-button_style_gray">
                 Найти
@@ -35,7 +35,7 @@
     </div>
     <div class="container-fluid">
       <div class="row middle-xs">
-        <div class="col-xs-3">
+        <div class="col-xs-3 col-sm-5 col-md-3">
           <div class="rbk-header__logo">
             <i class="puzzle-icon" style="width: 275px; height: 30px;">
               <svg width="406" height="45" viewBox="0 0 406 45" xmlns="http://www.w3.org/2000/svg">
@@ -52,29 +52,40 @@
             </i>
           </div>
         </div>
-        <div class="col-xs-8 col-xs-offset-1 puzzle_ta_right">
+        <div class="col-xs-8 col-sm-7 col-md-8 col-md-offset-1 puzzle_ta_right">
           <div class="rbk-header__menu puzzle_va_middle">
-            <a href="javascript:void(0)" class="rbk-header__menu-item">
-              Проекты
-            </a>
-            <a href="javascript:void(0)" class="rbk-header__menu-item is-active">
-              О компании
-            </a>
-            <a href="javascript:void(0)" class="rbk-header__menu-item">
-              Услуги
-            </a>
-            <a href="javascript:void(0)" class="rbk-header__menu-item">
-              Новости
-            </a>
-            <a href="javascript:void(0)" class="rbk-header__menu-item">
-              Команда
-            </a>
-            <a href="javascript:void(0)" class="rbk-header__menu-item">
-              Партнеры
-            </a>
-            <a href="javascript:void(0)" class="rbk-header__menu-item">
-             Контакты 
-           </a>
+            <div class="rbk-header__menu-mobile-icon rbk-header__menu-mobile-icon_js_click puzzle-icon__wrapper" style="width: 30px; height: 30px;">
+              <i class="puzzle-icon" style="width: 20px; height: 15px;">
+                <svg width="20" height="15" viewBox="0 0 20 15" xmlns="http://www.w3.org/2000/svg">
+                  <g fill="#364155" fill-rule="evenodd">
+                    <path d="M0 0h20v2H0zM0 6.5h20v2H0zM0 13h20v2H0z"/>
+                  </g>
+                </svg>
+              </i>
+            </div>
+            <div class="rbk-header__menu-list">
+               <a href="javascript:void(0)" class="rbk-header__menu-item">
+                 Проекты
+               </a>
+               <a href="javascript:void(0)" class="rbk-header__menu-item is-active">
+                 О компании
+               </a>
+               <a href="javascript:void(0)" class="rbk-header__menu-item">
+                 Услуги
+               </a>
+               <a href="javascript:void(0)" class="rbk-header__menu-item">
+                 Новости
+               </a>
+               <a href="javascript:void(0)" class="rbk-header__menu-item">
+                 Команда
+               </a>
+               <a href="javascript:void(0)" class="rbk-header__menu-item">
+                 Партнеры
+               </a>
+               <a href="javascript:void(0)" class="rbk-header__menu-item">
+                Контакты 
+              </a>
+            </div>
          </div>
          <i class="rbk-header__search rbk-header__search_js_click puzzle-icon puzzle_va_middle" style="width: 22px; height: 22px;">
           <svg width="22" height="22" viewBox="0 0 22 22" xmlns="http://www.w3.org/2000/svg">
@@ -574,10 +585,30 @@
     <div class="rbk-title puzzle_ta_center">
       Клиенты
     </div>
-    <div class="rbk-customers__list">
-      <a href="javascript:void(0)" class="rbk-customers__item">
-        <img width="147" height="50" src="assets/img/temp/ikea_logo.png" alt="">
-      </a>
+    <div class="rbk-customers__list-wrapper">
+      <div class="rbk-customers__list">
+        <a href="javascript:void(0)" class="rbk-customers__item">
+          <img width="147" height="50" src="assets/img/temp/ikea_logo.png" alt="">
+        </a>
+        <a href="javascript:void(0)" class="rbk-customers__item">
+          <img width="147" height="45" src="assets/img/temp/Auchan-logo.png" alt="">
+        </a>
+        <a href="javascript:void(0)" class="rbk-customers__item">
+          <img width="147" height="50" src="assets/img/temp/ikea_logo.png" alt="">
+        </a>
+        <a href="javascript:void(0)" class="rbk-customers__item">
+          <img width="147" height="45" src="assets/img/temp/Auchan-logo.png" alt="">
+        </a>
+        <a href="javascript:void(0)" class="rbk-customers__item">
+          <img width="147" height="50" src="assets/img/temp/ikea_logo.png" alt="">
+        </a>
+        <a href="javascript:void(0)" class="rbk-customers__item">
+          <img width="147" height="45" src="assets/img/temp/Auchan-logo.png" alt="">
+        </a>
+      </div>
+    </div>
+    <div class="rbk-customers__list-wrapper">
+      <div class="rbk-customers__list">
       <a href="javascript:void(0)" class="rbk-customers__item">
         <img width="147" height="45" src="assets/img/temp/Auchan-logo.png" alt="">
       </a>
@@ -592,27 +623,11 @@
       </a>
       <a href="javascript:void(0)" class="rbk-customers__item">
         <img width="147" height="45" src="assets/img/temp/Auchan-logo.png" alt="">
+      </a>
+      <a href="javascript:void(0)" class="rbk-customers__item">
+        <img width="147" height="50" src="assets/img/temp/ikea_logo.png" alt="">
       </a>
     </div>
-    <div class="rbk-customers__list">
-      <a href="javascript:void(0)" class="rbk-customers__item">
-        <img width="147" height="45" src="assets/img/temp/Auchan-logo.png" alt="">
-      </a>
-      <a href="javascript:void(0)" class="rbk-customers__item">
-        <img width="147" height="50" src="assets/img/temp/ikea_logo.png" alt="">
-      </a>
-      <a href="javascript:void(0)" class="rbk-customers__item">
-        <img width="147" height="45" src="assets/img/temp/Auchan-logo.png" alt="">
-      </a>
-      <a href="javascript:void(0)" class="rbk-customers__item">
-        <img width="147" height="50" src="assets/img/temp/ikea_logo.png" alt="">
-      </a>
-      <a href="javascript:void(0)" class="rbk-customers__item">
-        <img width="147" height="45" src="assets/img/temp/Auchan-logo.png" alt="">
-      </a>
-      <a href="javascript:void(0)" class="rbk-customers__item">
-        <img width="147" height="50" src="assets/img/temp/ikea_logo.png" alt="">
-      </a>
     </div>
   </div>
 </div>
@@ -620,7 +635,7 @@
 <footer class="rbk-footer">
   <div class="container-fluid">
     <div class="row">
-      <div class="col-xs-4">
+      <div class="col-xs-4 col-sm-5 col-md-4">
         <div class="rbk-footer__logo">
           <i class="puzzle-icon" style="width: 275px; height: 31px;">
             <svg width="406" height="45" viewBox="0 0 406 45" xmlns="http://www.w3.org/2000/svg">
@@ -658,7 +673,7 @@
           </a>
         </div>
       </div>
-      <div class="col-xs-3">
+      <div class="col-xs-3 col-sm-3 col-md-3">
         <div class="rbk-footer__menu">
           <div class="rbk-footer__menu-item">
             <a href="javascript:void(0)" class="rbk-footer__menu-item-link">
@@ -692,7 +707,7 @@
           </div>
         </div>
       </div>
-      <div class="col-xs-5">
+      <div class="col-xs-5 col-sm-4 col-md-5">
         <div class="rbk-footer__address" itemprop="address" itemscope="" itemtype="http://schema.org/PostalAddress">
           <div class="rbk-footer__address-title rbk-footer__address-row">
             Адрес:
